--- a/.github/workflows/compile-kernel.yml
+++ b/.github/workflows/compile-kernel.yml
@@ -17,11 +17,11 @@ on:
         type: choice
         options:
           - unifreq
-          - torvalds
+          - torvalds/linux
       kernel_version:
         description: "Select kernel version"
         required: false
-        default: "5.9-rc7"
+        default: "v5.9-rc7"
         type: choice
         options:
           - 5.4.1_5.10.1
@@ -30,7 +30,7 @@ on:
           - 5.10.1
           - 5.15.1
           - 6.1.1
-          - 5.9-rc7
+          - v5.9-rc7
       kernel_auto:
         description: "Auto use the latest kernel"
         required: false
