--- a/.github/workflows/compile-kernel.yml
+++ b/.github/workflows/compile-kernel.yml
@@ -17,7 +17,7 @@ on:
         type: choice
         options:
           - unifreq
-          - torvalds/linux
+          - torvalds/linux@master
       kernel_version:
         description: "Select kernel version"
         required: false
