--- a/.github/workflows/compile-kernel.yml
+++ b/.github/workflows/compile-kernel.yml
@@ -21,7 +21,7 @@ on:
       kernel_version:
         description: "Select kernel version"
         required: false
-        default: "v5.9-rc7"
+        default: "5.9-rc7"
         type: choice
         options:
           - 5.4.1_5.10.1
@@ -30,7 +30,7 @@ on:
           - 5.10.1
           - 5.15.1
           - 6.1.1
-          - v5.9-rc7
+          - 5.9-rc7
       kernel_auto:
         description: "Auto use the latest kernel"
         required: false
